--- a/style.css
+++ b/style.css
@@ -33,17 +33,17 @@ header {
   background-position: center;
   height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url("imagenes/desarrollador.jpg");
+    url("imagenes/hero-inferior.svg");
 }
 
 .banner-container {
   text-align: center;
-  padding: 15% 0;
+  padding: 1% 0;
 }
 
 .banner h1 {
   margin: 0;
-  color: white;
+  color: rgb(249, 244, 244);
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
   font-size: 62px;
   font-weight: bold;
@@ -52,7 +52,7 @@ header {
 .banner p {
   font-size: 30px;
   color: white;
-  opacity: 0.7;
+  opacity: 0.8;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
 }
 
@@ -127,14 +127,14 @@ h4 {
   height: 200px;
   width: 200px;
   border-radius: 5px;
-  box-shadow: 2px 2px 4px #000;
+  box-shadow: 3px 3px 6px #000;
 }
 
 #imagen-producto {
   margin: auto;
   height: 550px;
   width: 550px;
-  border-radius: 5px;
+  border-radius: 2px;
   box-shadow: 2px 2px 4px #000;
 }
 
