--- a/style.css
+++ b/style.css
@@ -89,8 +89,8 @@ h3 {
 .grid-item {
   background-color: var(--colorFondoItems);
   color: var(--colorSubTitulo);
-  padding: 20px;
-  border-radius: 5px;
+  padding: 15px;
+  border-radius: 2px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   cursor: pointer;
   text-align: center;
@@ -132,8 +132,8 @@ h4 {
 
 #imagen-producto {
   margin: auto;
-  height: 550px;
-  width: 550px;
+  height: 300px;
+  width: 300px;
   border-radius: 2px;
   box-shadow: 2px 2px 4px #000;
 }
@@ -149,7 +149,7 @@ h4 {
 }
 
 #puntuacion {
-  margin: 10px 0;
+  margin: 5px 0;
 }
 
 a {
@@ -158,7 +158,7 @@ a {
   -moz-appearance: button;
   appearance: button;
   text-decoration: none;
-  border-radius: 5px;
+  border-radius: 3px;
   padding: 15px;
   background-color: var(--colorFondoItems);
   color: var(--colorSubTitulo);
@@ -227,12 +227,11 @@ footer {
 
 .derechos-de-autor {
   font-size: 15px;
-  color: #aeaeae;
+  color: #f6f1f1;
   padding: 20px;
 }
-.proyectos-recientes {
-  padding: 40px;
-}
+
+
 .seccion-clara {
   color:black;
   background-color: white;
